<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ALevel">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvIdHanjiA"
                    android:layout_width="58dp"
                    android:layout_height="45dp"
                    android:padding="5dp"
                    android:text="@string/tvPtHanjiA"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/etIdHanjiA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/etHanjiA"
                    android:inputType="textPersonName" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvIdTailoA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/tvPtTailo"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/etIdTailoA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/etTailoA"
                    android:inputType="textPersonName" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvIdHuagiA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/tvPtHuagiA"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/etIdHuagiA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/etHuagiA"
                    android:inputType="textPersonName" />
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btIdFindA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btPtFindA"
                android:textSize="18sp" />
        </LinearLayout>

        <ListView
            android:id="@+id/LVA"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/atansu" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>