<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <Button
        android:id="@+id/btIdA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="396dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="61dp"
        android:text="@string/btPtA"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btIdPractice"
        app:layout_constraintEnd_toStartOf="@+id/btIdB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btIdB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/btPtB"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/btIdC"
        app:layout_constraintStart_toEndOf="@+id/btIdA"
        app:layout_constraintTop_toTopOf="@+id/btIdA" />

    <Button
        android:id="@+id/btIdC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/btPtC"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btIdB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btIdB" />

    <Button
        android:id="@+id/btIdDictionary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:onClick="Taiwan"
        android:text="@string/btPtDicionary"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btIdPractice" />

    <Button
        android:id="@+id/btIdPractice"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginEnd="75dp"
        android:layout_marginRight="75dp"
        android:layout_marginBottom="21dp"
        android:text="@string/btPtPractice"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btIdDictionary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btIdA" />
</androidx.constraintlayout.widget.ConstraintLayout>